[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "plt"
version = "0.2.0"
description = "A thin forwarder to matplotlib.pyplot."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }     # or: license = { text = "MIT" }
authors = [{ name = "Sim Bamford" }]
dependencies = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/simbamford/plt"
